syntax = "proto3";

package ionscale.v1;
option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "ionscale/v1/ref.proto";

message GetACLPolicyRequest {
  uint64 tailnet_id = 1;
}

message GetACLPolicyResponse {
  bytes value = 1;
}

message SetACLPolicyRequest {
  uint64 tailnet_id = 1;
  bytes value = 2;
}

message SetACLPolicyResponse {
}